--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+38 096 111 11 11" class="contacts-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -122,7 +122,7 @@
             <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="tel:+38 096 111 11 11" class="contacts-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
