--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work-list">
           <li class="work-item">
-            <img src="./images/img1.jpg" alt="photo work" width="370" />
+            <img src="./images/img1.jpg" alt="программист за компьютером" width="370" />
           </li>
           <li class="work-item">
-            <img src="./images/img2.jpg" alt="photo work" width="370" />
+            <img src="./images/img2.jpg" alt="интерфейс мобильного приложения" width="370" />
           </li>
           <li class="work-item">
-            <img src="./images/img3.jpg" alt="photo work" width="370" />
+            <img src="./images/img3.jpg" alt="цвета на графическом планшете" width="370" />
           </li>
         </ul>
       </section>
@@ -88,22 +88,22 @@
         <h2 class="section-title">Наша команда</h2>
         <ul class="card-list">
           <li class="card-item">
-            <img src="./images/img4.jpg" alt="team photo" width="270" />
+            <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="card-title">Игорь Демьяненко</h3>
             <p class="card-text">Product Designer</p>
           </li>
           <li class="card-item">
-            <img src="./images/img5.jpg" alt="team photo" width="270" />
+            <img src="./images/img5.jpg" alt="Ольга Репина" width="270" />
             <h3 class="card-title">Ольга Репина</h3>
             <p class="card-text">Frontend Developer</p>
           </li>
           <li class="card-item">
-            <img src="./images/img6.jpg" alt="team photo" width="270" />
+            <img src="./images/img6.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="card-title">Николай Тарасов</h3>
             <p class="card-text">Marketing</p>
           </li>
           <li class="card-item">
-            <img src="./images/img7.jpg" alt="team photo" width="270" />
+            <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="card-title">Михаил Ермаков</h3>
             <p class="card-text">UI Designer</p>
           </li>
@@ -111,18 +111,18 @@
       </section>
     </main>
 
-    <!-- fotter -->
+    <!-- footer -->
     <footer class="page-footer">
       <a href="./index.html" class="logo-bottom"><span class="accent">Web</span>Studio</a>
 
       <address class="residence">
         г. Киев, пр-т Леси Украинки, 26
-        <ul class="contacts-bottom">
+        <ul class="residence-contacts">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="residence-link">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="residence-link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
