--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <footer class="page-footer">
       <a href="./index.html" class="logo-bottom"><span class="accent">Web</span>Studio</a>
 
-      <address class="residence">
+      <address class="residence-place">
         г. Киев, пр-т Леси Украинки, 26
         <ul class="residence-contacts">
           <li class="item">
